[gd_scene load_steps=7 format=3 uid="uid://wu7f0m71xiv5"]

[ext_resource type="Script" path="res://Scripts/UI/GamePrompt/NewGame/WelcomeGamePrompt.gd" id="1_q8wmy"]
[ext_resource type="Texture2D" uid="uid://cc0uxg71e5lu0" path="res://Assets/UI Sprites/ALL UI ASSETS on one sheet.png" id="2_owohx"]
[ext_resource type="Texture2D" uid="uid://dfublfalq30f7" path="res://Assets/UI Sprites/Buttons/Icon Buttons/Icon Buttons Spritesheet.png" id="3_fcihi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ec0"]
atlas = ExtResource("2_owohx")
region = Rect2(56, 104, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31471"]
atlas = ExtResource("3_fcihi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4xm7"]
atlas = ExtResource("3_fcihi")
region = Rect2(160, 0, 32, 32)

[node name="WelcomeGamePrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8wmy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_u7ec0")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="ClosePromptButton" type="TextureButton" parent="PanelContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.873
anchor_right = 1.0
anchor_bottom = 0.147
offset_left = 0.183838
offset_bottom = -0.335999
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
texture_normal = SubResource("AtlasTexture_31471")
texture_pressed = SubResource("AtlasTexture_g4xm7")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Welcome to my game!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEntry" type="TextEdit" parent="PanelContainer/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
placeholder_text = "Player Name"

[connection signal="pressed" from="PanelContainer/NinePatchRect/ClosePromptButton" to="." method="_on_close_prompt_button_pressed"]
